# precinct-insight

./: .gitattributes  .gitignore  .pre-commit-config.yaml  DEVELOPER.md  README.md  eslint.config.js  knip.config.js  package-lock.json  package.json  pyproject.toml
data/: README.md
data/raw/: 2024-general-federal-state-results-by-precinct-official.xlsx
docs/: index.html  manifest.json  tests.html
docs/components/ci-footer/: ci-footer.css  ci-footer.html  ci-footer.js
docs/data/: election_results_2022.csv
docs/js/: app.js  appState.js  controllers.js  filters.js  map.js  store.js  ui-config.js  ui-config.json
docs/styles/: style.css
src/: run_all.py
src/precinct_insight/: build_meta.py  melt_election.py  stamp_version.py  utils_logger.py
tests/: test_melt_election.py
